--- a/4.html
+++ b/4.html
@@ -1,20 +1,17 @@
-<!4.assignment>
+//4.Develop a web page using target attribute. 
 <html>
 <head>
-	<title>Pseudo-classes and elements</title>
-	<style>
-		a:hover {
-			color: #ff0000;
-		}
-		
-		p::first-letter {
-			font-size: 24px;
-			color: #0000ff;
-		}
-	</style>
+	<title>Target Attribute Example</title>
 </head>
 <body>
-	<a href="#">Hover over me!</a>
-	<p>This is a paragraph of text.</p>
+	<h2>Target Attribute Example</h2>
+	
+	
+	<a href="https://www.google.com" target="_blank">Open Google in a new window</a><br><br>
+	<a href="https://www.bing.com" target="_new">Open Bing in a new tab</a><br><br>
+	<a href="https://www.yahoo.com" target="_self">Open Yahoo in the same frame</a><br><br>
+	<a href="https://www.microsoft.com" target="_parent">Open Microsoft in the parent frame</a><br><br>
+	<a href="https://www.apple.com" target="_top">Open Apple in the top frame</a>
 </body>
 </html>
+
