--- a/2.html
+++ b/2.html
@@ -1,48 +1,46 @@
-/*2.Develop your own web page basics.html with all the following html tags Html, head, title, body Heading, Paragraph, Italic, Bold, Anchor, Unordered List, List Item label,Blockquote, Horizontal rule, Image, Division, Span */ 
+//2.Develop a web page with the semantic elements <form>, <table> and <article>
 <html>
 <head>
-	<title>HTML Basics</title>
+	<title>Semantic Elements</title>
+	<style>
+		table {
+			border-collapse: collapse;
+		}
+		th, td {
+			border: 1px solid #ccc;
+			padding: 10px;
+		}
+	</style>
 </head>
 <body>
-	
-	<h1>Welcome to HTML Basics</h1>
-	
-	
-	<p>This is a paragraph of text.</p>
-	
-
-	<p>This text is <i>italic</i>.</p>
-	
-	<p>This text is <b>bold</b>.</p>
-	
-	
-	<p>Visit <a href="https://www.google.com">Google</a> for more information.</p>
-	
-	<ul>
-		
-		<li>Item 1</li>
-		<li>Item 2</li>
-		<li>Item 3</li>
-	</ul>
-	
-	
-	<label for="name">Enter your name:</label>
-	<input type="text" id="name">
-	
-
-	<blockquote cite="https://www.example.com">
-		<p>This is a blockquote.</p>
-	</blockquote>
-	
-	
-	<hr>
-	
-
-	<img src="image.jpg" alt="An image" width="200" height="100">
-
-	<div style="background-color: #f2f2f2; padding: 20px;">
-		<p>This is a division.</p>
-	</div>
-	<p>This is a <span style="color: #0000ff;">blue</span> text.</p>
+		<form>
+		<label for="name">Name:</label>
+		<input type="text" id="name" name="name"><br><br>
+		<label for="email">Email:</label>
+		<input type="email" id="email" name="email"><br><br>
+		<input type="submit" value="Submit">
+	</form>
+	<table>
+		<tr>
+			<th>Name</th>
+			<th>Age</th>
+			<th>City</th>
+		</tr>
+		<tr>
+			<td>Madeena Beebi</td>
+			<td>19</td>
+			<td>Visakhapatnam</td>
+		</tr>
+		<tr>
+			<td>Simma Sravani</td>
+			<td>20</td>
+			<td>Vizag</td>
+		</tr>
+	</table>
+		<article>
+		<h2>Introduction to Semantic Elements</h2>
+		<p>Semantic elements are HTML elements that provide meaning to the structure of a web page.</p>
+		<p>They help improve the accessibility and readability of a web page.</p>
+	</article>
 </body>
 </html>
